prometheus/bases/alertmanager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alert-manager
spec:
  ports:
    - name: proxy
      port: 9095
      protocol: TCP
      targetPort: proxy
  selector:
    app: alertmanager
