prometheus/bases/alertmanager/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alert-manager
spec:
  to:
    kind: Service
    name: alert-manager
  port:
    targetPort: proxy
